--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xVh-5G-Oce">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -51,7 +51,7 @@
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="Active">
+                                                    <state key="normal" image="red like">
                                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
                                                 </button>
@@ -99,10 +99,83 @@
             </objects>
             <point key="canvasLocation" x="60.869565217391312" y="92.410714285714278"/>
         </scene>
+        <!--ProfileView-->
+        <scene sceneID="CvW-5k-Xn7">
+            <objects>
+                <viewController title="ProfileView" id="xVh-5G-Oce" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ia2-EW-9xi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYD-3s-YVm">
+                                <rect key="frame" x="366" y="99" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="24" id="neh-6m-PNn"/>
+                                    <constraint firstAttribute="height" constant="24" id="sLJ-ds-HsJ"/>
+                                </constraints>
+                                <state key="normal" image="Exit"/>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="etN-Tt-P6p">
+                                <rect key="frame" x="16" y="76" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="8s6-WA-rdE"/>
+                                    <constraint firstAttribute="width" constant="70" id="zNz-o9-76y"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tKF-AL-aFA">
+                                <rect key="frame" x="16" y="154" width="382" height="27"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10f-5S-B9t">
+                                <rect key="frame" x="16" y="189" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.68235294117647061" green="0.68627450980392157" blue="0.70588235294117641" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, World!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0X5-Xh-nVj">
+                                <rect key="frame" x="16" y="213" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8xY-d6-SRR"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="10f-5S-B9t" firstAttribute="top" secondItem="tKF-AL-aFA" secondAttribute="bottom" constant="8" id="41B-5r-a9e"/>
+                            <constraint firstItem="PYD-3s-YVm" firstAttribute="top" secondItem="Ia2-EW-9xi" secondAttribute="top" constant="99" id="63u-De-mf0"/>
+                            <constraint firstItem="10f-5S-B9t" firstAttribute="leading" secondItem="tKF-AL-aFA" secondAttribute="leading" id="Pey-8L-rXX"/>
+                            <constraint firstItem="tKF-AL-aFA" firstAttribute="top" secondItem="etN-Tt-P6p" secondAttribute="bottom" constant="8" id="RQY-H4-9LZ"/>
+                            <constraint firstItem="8xY-d6-SRR" firstAttribute="trailing" secondItem="tKF-AL-aFA" secondAttribute="trailing" constant="16" id="RoN-yo-rkj"/>
+                            <constraint firstItem="etN-Tt-P6p" firstAttribute="top" secondItem="Ia2-EW-9xi" secondAttribute="top" constant="76" id="bPt-J6-LjW"/>
+                            <constraint firstItem="8xY-d6-SRR" firstAttribute="trailing" secondItem="0X5-Xh-nVj" secondAttribute="trailing" constant="16" id="dDc-tf-E7h"/>
+                            <constraint firstItem="0X5-Xh-nVj" firstAttribute="top" secondItem="10f-5S-B9t" secondAttribute="bottom" constant="8" id="hKm-d1-d10"/>
+                            <constraint firstItem="8xY-d6-SRR" firstAttribute="trailing" secondItem="PYD-3s-YVm" secondAttribute="trailing" constant="24" id="ukG-9Z-j9Q"/>
+                            <constraint firstItem="0X5-Xh-nVj" firstAttribute="leading" secondItem="10f-5S-B9t" secondAttribute="leading" id="w7v-hL-FIO"/>
+                            <constraint firstItem="tKF-AL-aFA" firstAttribute="leading" secondItem="etN-Tt-P6p" secondAttribute="leading" id="wno-lV-9a3"/>
+                            <constraint firstItem="etN-Tt-P6p" firstAttribute="leading" secondItem="8xY-d6-SRR" secondAttribute="leading" constant="16" id="xJq-a4-Dro"/>
+                            <constraint firstItem="8xY-d6-SRR" firstAttribute="trailing" secondItem="10f-5S-B9t" secondAttribute="trailing" constant="16" id="z06-Q3-kvo"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ESp-4u-kvk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-683" y="92"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
-        <image name="Active" width="42" height="42"/>
+        <image name="Exit" width="24" height="24"/>
+        <image name="Photo" width="70" height="70"/>
+        <image name="red like" width="42" height="42"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
